[gd_scene load_steps=2 format=3 uid="uid://birv32nt6w7kq"]

[ext_resource type="Script" path="res://Escenas/menu.gd" id="1_ctr21"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctr21")

[node name="contenedorMenuPrincipal" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -111.0
offset_right = 127.0
offset_bottom = -10.0
grow_vertical = 0

[node name="bttnIniciar" type="Button" parent="contenedorMenuPrincipal"]
layout_mode = 2
focus_neighbor_top = NodePath("../bttnSalir")
text = "Iniciar juego"

[node name="bttnOpciones" type="Button" parent="contenedorMenuPrincipal"]
layout_mode = 2
text = "Opciones"

[node name="bttnSalir" type="Button" parent="contenedorMenuPrincipal"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../bttnIniciar")
text = "Salir del juego"

[connection signal="pressed" from="contenedorMenuPrincipal/bttnIniciar" to="." method="_on_bttn_iniciar_pressed"]
[connection signal="pressed" from="contenedorMenuPrincipal/bttnSalir" to="." method="_on_bttn_salir_pressed"]
